Colaboratory를 통해 생성됨

--- a/10818.ipynb
+++ b/10818.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "10818.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMfneFULWqvVfksD3htn6jq",
+      "authorship_tag": "ABX9TyNqJstrVpdGKzJ+Pnpf1+bh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,15 +31,15 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "fzoLz2WAgtqF"
+        "id": "PHgl3cOrwBsV"
       },
       "outputs": [],
       "source": [
-        "import sys\n",
-        "a = input()\n",
-        "num_list = list(map(int,sys.stdin.readline().split()))\n",
+        "N = []\n",
+        "for i in range(9):\n",
+        "    N.append(int(input()))\n",
         "\n",
-        "print(min(num_list),max(num_list))"
+        "print(max(N), N.index(max(N))+1)"
       ]
     }
   ]
